force-app/main/default/objects/PricebookEntry/fields/Applied_Date__c.field-meta.xml
<CustomField>
    <fullName>Applied_Date__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 22nd Oct 2020
User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 
Purpose: DAOS</description>
    <label>Applied Date</label>
    <type>Date</type>
</CustomField>