force-app/main/default/objects/PricebookEntry/fields/DAOS_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>DAOS_Last_Modified_Date__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 22nd Oct 2020
User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 
Purpose:</description>
    <label>DAOS Last Modified Date</label>
    <type>DateTime</type>
</CustomField>