force-app/main/default/objects/PricebookEntry/fields/External_Id_DAOS__c.field-meta.xml
<CustomField>
    <fullName>External_Id_DAOS__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 22nd Oct 2020
User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 
Purpose:</description>
    <externalId>true</externalId>
    <label>External Id(DAOS)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>