force-app/main/default/objects/PricebookEntry/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 22nd Oct 2020
User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 
Purpose: External ID</description>
    <externalId>true</externalId>
    <label>ExternalId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>