force-app/main/default/objects/PricebookEntry/fields/IsNSC__c.field-meta.xml
<CustomField>
    <fullName>IsNSC__c</fullName>
    <formula>Pricebook2.Is_Regional_Pricebook__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsNSC</label>
    <type>Checkbox</type>
</CustomField>