force-app/main/default/objects/PricebookEntry/fields/PriceType__c.field-meta.xml
<CustomField>
    <fullName>PriceType__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 22nd Oct 2020
User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 
Purpose: Price Type</description>
    <label>PriceType</label>
    <length>5</length>
    <type>Text</type>
</CustomField>