force-app/main/default/objects/PricebookEntry/fields/Rownum__c.field-meta.xml
<CustomField>
    <fullName>Rownum__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 22nd Oct 2020
User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 
Purpose:</description>
    <externalId>true</externalId>
    <label>Rownum</label>
    <length>18</length>
    <type>Text</type>
</CustomField>