force-app/main/default/objects/PricebookEntry/fields/Unit_Price_DAOS__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_DAOS__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 22nd Oct 2020
User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 
Purpose: List Price</description>
    <label>Unit Price (DAOS)</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>