force-app/main/default/objects/PricebookEntry/fields/UnitDiscount__c.field-meta.xml
<CustomField>
    <fullName>UnitDiscount__c</fullName>
    <label>Unit Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>